--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "chance": "^1.0.4",
     "ejs": "^2.5.5",
+    "moment": "^2.17.1",
     "mongoose": "^4.7.2",
     "randomcolor": "^0.4.4",
     "socket.io": "^1.7.1",
